--- a/src/pages/Genpages.module.css
+++ b/src/pages/Genpages.module.css
@@ -1,5 +1,5 @@
 .container {
-    background-color: rgb(235, 14, 14);
+    background-color: rgb(133, 133, 133);
     /* height: 100%; */
     width: 100%;
     display: flex;
@@ -7,13 +7,11 @@
 }
 
 .cont {
-    background-color: rgb(214, 216, 176);
+    background-color: rgb(178, 178, 178);
     width: 90%;
+    min-height: 100vh;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+    border-radius: 15px;
     /* height: 70vh; */
-}
-
-.card {
-    width: 10vw;
-    height: 30vh;
-    background-color: blue;
 }
