--- a/src/pages/pokemonCards.module.css
+++ b/src/pages/pokemonCards.module.css
@@ -5,30 +5,36 @@
     padding: 20px;
   }
   
-  .pokemoncard {
-    background-color: #f8f9fa;
-    border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    padding: 10px;
-    color: black;
-  }
+.pokemoncard {
+  background-color: #f8f9fa;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  padding: 10px;
+  color: black;
+}
   
-  .pokemonimage {
-    width: 100%;
-    height: 140px;
-  }
+.pokemonimage {
+  width: 100%;
+  height: 140px;
+}
   
-  .title {
-    text-align: center;
-    margin: 20px 0;
-    padding-top: 10px;
-    color:red;
-    font-size: 3rem;
-    text-shadow: 
+.title {
+  text-align: center;
+  margin: 20px 0;
+  padding-top: 10px;
+  color:red;
+  font-size: 3rem;
+  text-shadow: 
     -1px -1px 0 #000000,  
     1px -1px 0 #000,
     -1px 1px 0 #000,
     1px 1px 0 #000;
-    font-family: 'pokemonfont';
+  font-family: 'pokemonfont';
+}
+
+  @media (max-width: 600px) {
+  .title {
+    font-size: 2rem;
+  }
   }
