--- a/src/pages/home.module.css
+++ b/src/pages/home.module.css
@@ -5,7 +5,7 @@
 
 @font-face {
     font-family: 'pokemonfont';
-    src: url('/public/fonts/PokemonGB.woff2') format('woff2');
+    src: url('/fonts/PokemonGB.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
 }
@@ -17,12 +17,12 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
     text-indent: 2%;
-    background-image: url("pokebackground.jpg");
+    background-image: url("/pokebackground.jpg");
     background-size: cover;
 }
 
 .dex {
-    background-image: url("pokedex2.png");
+    background-image: url("/pokedex2.png");
     background-repeat: no-repeat;
     background-size: 120vh;
     background-position: center;
